Fix the structure of `security` element in emitted Swagger
