# packages/adl/test/output/rpaas/liftr.frs/openapi.json
@@ -13,11 +13,13 @@
   "consumes": [
     "application/json"
   ],
-  "security": {
-    "azure_auth": [
-      "user_impersonation"
-    ]
-  },
+  "security": [
+    {
+      "azure_auth": [
+        "user_impersonation"
+      ]
+    }
+  ],
   "securityDefinitions": {
     "azure_auth": {
       "type": "oauth2",
